gateway/04-app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: roboshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: imranjoindevops/app1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1
  namespace: roboshop
spec:
  selector:
    app: app1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1
  namespace: roboshop
spec:
  parentRefs:
    - name: roboshop-gateway
      sectionName: https
  hostnames:
   - "app1.devops90s.shop"    

  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
      - name: app1
        port: 80
