gateway/06-http-route.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: app1
#   namespace: roboshop
# spec:
#   parentRefs:
#     - name: roboshop-gateway
#       sectionName: https
#   hostnames:
#    - "app1.devops90s.shop"    

#   rules:
#     - matches:
#       - path:
#           type: PathPrefix
#           value: /
#       backendRefs:
#       - name: app1
#         port: 80

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: app1
  namespace: roboshop
spec:
  hostnames:
  - app1.devops90s.shop
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: roboshop
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: app1
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
